<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lightblue"
    tools:context="com.example.stav.testapp.MainActivity">

    <TextView
        android:id="@+id/num_var_TextView"
        style="@style/Regular"
        android:layout_width="248dp"
        android:layout_height="36dp"
        android:layout_alignLeft="@+id/num_con_TextView"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/num_con_TextView"
        android:layout_marginTop="31dp"
        android:text="@string/varnum"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_con_TextView" />

    <EditText
        android:id="@+id/num_con_EditText"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/num_con_TextView"
        android:layout_toEndOf="@+id/num_var_TextView"
        android:layout_toRightOf="@+id/num_var_TextView"
        android:background="@null"
        android:ems="10"
        android:hint="@string/enternum"
        android:inputType="number"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num_con_TextView"
        style="@style/Regular"
        android:layout_width="260dp"
        android:layout_height="37dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/num_var_TextView"
        android:layout_marginLeft="23dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="28dp"
        android:text="@string/numcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/num_con_EditText"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/num_con_EditText"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/next"
        android:onClick="ButtonNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_var_EditText"
        app:layout_constraintVertical_bias="0.918" />

    <EditText
        android:id="@+id/num_var_EditText"
        android:layout_width="97dp"
        android:layout_height="38dp"
        android:layout_alignTop="@+id/num_var_TextView"
        android:layout_toEndOf="@+id/num_var_TextView"
        android:layout_toRightOf="@+id/num_var_TextView"
        android:background="@null"
        android:ems="10"
        android:hint="@string/enternum"
        android:inputType="textPersonName|number"
        android:textAppearance="@style/TextAppearance.AppCompat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_above="@+id/button"
        android:layout_alignLeft="@+id/num_con_TextView"
        android:layout_alignStart="@+id/num_con_TextView"
        android:layout_marginBottom="67dp"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        style="@style/Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroup2"
        android:layout_alignLeft="@+id/radioGroup2"
        android:layout_alignStart="@+id/radioGroup2"
        android:layout_marginBottom="17dp"
        android:text="@string/minmax" />


</RelativeLayout>




